--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <hr>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/circle.png" alt="Wearing the mask with Judy" /></td>
+      <td><img src="circle.png" alt="Wearing the mask with Judy" /></td>
       <td>
         <h1>Fu, Hsiao Hsuan</h1>
         <p><em>University of <strong>TungHai</strong></em></p>
